2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldgram.y (filename_spec): New rule.
	(input_section_spec_no_keep): Use filename_spec.
	(wildcard_maybe_exclude): New rule.
	* testsuite/ld-scripts/align.exp: Run new tests.
	* testsuite/ld-scripts/align3.d: New file.
	* testsuite/ld-scripts/align3.t: New file.
	* testsuite/ld-scripts/align4.d: New file.
	* testsuite/ld-scripts/align4.t: New file.
	* testsuite/ld-scripts/align5.d: New file.
	* testsuite/ld-scripts/align5.t: New file.
	* NEWS: Mention change.

2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldlang.c (placed_commons): Delete.
	(lang_add_wild): No longer set placed_commons.

2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldgram.y (ldgram_had_keep): Make static.
	(ldgram_vers_current_lang): Likewise.

2017-07-25  Alan Modra  <amodra@gmail.com>

	* testsuite/ld-powerpc/tlsopt5.s: Add cfi.
	* testsuite/ld-powerpc/tlsopt5.d: Update.
	* testsuite/ld-powerpc/tlsopt5.wf: New file.
	* testsuite/ld-powerpc/powerpc.exp: Perform new tlsopt5 test.

2017-07-24  Claudiu Zissulescu  <claziss@synopsys.com>

	* testsuite/ld-arc/jli-overflow.d: Force testing for little
	endian.
	* testsuite/ld-arc/tls_gd-01.d: Fix string to match bigendian
	systems.
	* testsuite/ld-arc/tls_ie-01.d: Fix test for bigendian systems.

2017-07-19  Maciej W. Rozycki  <macro@imgtec.com>

	* testsuite/ld-scripts/fill.d: Adjust `xfail' entries.  Add
	`notarget' entries.  Update comments.
	* testsuite/ld-scripts/fill16.d: New test.
	* testsuite/ld-scripts/fill16_0.s: New test source.
	* testsuite/ld-scripts/fill16_1.s: New test source.
	* testsuite/ld-scripts/fill16_2.s: New test source.
	* testsuite/ld-scripts/data.exp: Run the new test.

2017-07-19  Claudiu Zissulescu  <claziss@synopsys.com>
	    John Eric Martin  <John.Martin@emmicro-us.com>

	* emulparams/arcelf.sh (JLI_START_TABLE): Define.
	* scripttempl/elfarc.sc: Handle jlitab section.
	* scripttempl/elfarcv2.sc: Likewise.